--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "crypto-js": "^3.1.9-1",
     "expo": "^32.0.0",
     "firebase": "^5.8.6",
+    "moment": "^2.24.0",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-navigation": "^3.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
