--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-navigation": "^3.4.1",
-    "react-redux": "^6.0.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "react-redux": "^6.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "babel-preset-expo": "^5.0.0",
-    "flow-bin": "^0.94.0"
+    "babel-preset-expo": "^5.0.0"
   },
   "private": true
 }
