--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-navigation": "^3.4.1",
     "redux": "^4.0.1",
-    "react-redux": "^6.0.1"
+    "react-redux": "^6.0.1",
+    "@expo/vector-icons": "latest"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
