--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@dicebear/avatars": "^3.0.6",
     "@dicebear/avatars-male-sprites": "^2.0.6",
+    "@expo/vector-icons": "latest",
     "crypto-js": "^3.1.9-1",
     "expo": "^32.0.0",
     "expo-svg-uri": "^1.0.0",
@@ -17,10 +18,10 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-datepicker": "^1.7.2",
+    "react-native-swipeable": "^0.6.0",
     "react-navigation": "^3.4.1",
-    "redux": "^4.0.1",
     "react-redux": "^6.0.1",
-    "@expo/vector-icons": "latest"
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
