--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "^32.0.0",
     "expo-svg-uri": "^1.0.0",
     "firebase": "^5.8.6",
+    "giphy-js-sdk-core": "^1.0.6",
     "moment": "^2.24.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
